RTD-220 collapse arrow fixes RTD-265 fix language translations for queue dashboard RTD-189 Improvements to how servers and server fetch strategy is passed to events sdk

--- a/src/assets/css/element-overrides/_spiner.scss
+++ b/src/assets/css/element-overrides/_spiner.scss
@@ -1,4 +1,5 @@
-.el-loading-mask {
+body .el-loading-mask {
+    @apply relative;
     .el-loading-spinner {
         .circular {
             height: 60px;
